...
 */
enum class NavTab(
    val title: String,
    val icon: ImageVector
) {
    TUNNELS("Tunnels", Icons.Filled.VpnKey),
    APP_RULES("Apps", Icons.Filled.Apps),
    CONNECTIONS("Connections", Icons.Filled.Timeline),
    SETTINGS("Settings", Icons.Filled.Settings)
}


